Small fixes on mobile version was made

--- a/src/pages/HomePage/components/Cart/Cart.scss
+++ b/src/pages/HomePage/components/Cart/Cart.scss
@@ -48,8 +48,6 @@
       font-family: $second-font;
       color: $primary-color;
       font-size: 20px;
-      font-style: normal;
-      font-weight: 600;
       line-height: 28px;
     }
   }
@@ -69,7 +67,11 @@
   .modal-panel {
     .cart-result-content {
       width: 390px;
-      padding: 20px;
+      
+      span {
+        font-size: 18px;
+        line-height: 20px;
+      }
     }
   }
 }
